--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -1,4 +1,5 @@
 Development
+    Updated Polish translation
     Updated Portuguese translation
     Add key bindings for h tv_step_channel down and k tv_step_channel up
 1.0.9a
