--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 Development
+    Updated Hungarian translation
     Updated Polish translation
     Updated Portuguese translation
     Add key bindings for h tv_step_channel down and k tv_step_channel up
