--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 Development
+    Only do the media player allocation event if no video is present
     Fix parameter warning to gtk_widget_get_visible
     Add backend variable to gmtk.pc
     Run autoreconf
