--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -1,4 +1,5 @@
 Development
+    Don't force a minimum size on the tracker
 1.0.9b
     Only do the media player allocation event if no video is present
     Fix parameter warning to gtk_widget_get_visible
